feat(front): added frontend
